<resources>
    <string name="app_name">Appiz</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_places">Places</string>
    <string name="title_add_place">Add place</string>
    <string name="title_about">About</string>
    <string name="phone_permission_denied">Permission not granted</string>
    <string name="price">Price:</string>
    <string name="phone">Tel:</string>
    <string name="delete_confirmation">Are you sure you want to delete this place?</string>
    <string name="delete_message">Place removed!</string>
    <string name="delete">Delete</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="whatsapp_not_installed">Whatsapp have not been installed.</string>
    <string name="check_fields">Something weird happened. Check all fields.</string>
    <string name="location_added">Your current location was added to the place.</string>
    <string name="title_activity_maps">Map</string>
    <string name="add_location">Add location</string>
    <string name="map">Map</string>
    <string name="share">Share</string>
    <string name="create_account">create account</string>
    <string name="sign_up">sign up</string>
    <string name="sign_in">sign in</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="developed_by">Developed by Fernnando Dittmar</string>
    <string name="place_name">Place Name</string>
    <string name="place_price">Place Price</string>
    <string name="phone_number">Phone Number</string>
    <string name="save">Save</string>
    <string name="check_all_fields">Please check all fields. Username must be a valid email and password must have more than 6 characters.</string>
    <string name="invalid_credentials">Invalid credentials.</string>
    <string name="account_created">Account successfully created!</string>
    <string name="location_not_set">Location not found!</string>


</resources>
